# daemon

./: .cirrus.yml  .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  Anchor.toml  BRAND.md  CHANGELOG.md  CLAUDE.md  CLAUDE_FLAGS.md  CONTRIBUTING.md  DAEMON_AI_CLOUD_DEPLOYMENT.md  DAEMON_AI_PRICING_AND_HOLDER_PLAN.md  DESIGN_SYSTEM.md  Dockerfile.cloud  FRONTIER_SUBMISSION.md  MASTER_PLAN.md  MERGE_PLAN.md  MOBILE-UX-PLAN.md  PERFORMANCE_FIXES.md  PLUGIN_TODOS.md  README.md  RELEASE_V4.md  RESULTS.md  TWEETS.md  Whatsnew.md  codemagic.yaml  electron-builder.json  gotomarket.md  index.html  osv-scanner.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vercel.json  vite.bridge.config.ts  vite.cloud.config.ts  (+2 more)
.github/: dependabot.yml  pull_request_template.md
.next/: prerender-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  STATE.md
cli-design/: RESEARCH_NOTES.md  SKILL.md  command-contract-template.md
docs/: DAEMON_AI_CLOUD_API.md  seeker-companion.md  solana-ide-roadmap.md
features/: daemon-ide-status-requirements-prd.md  plan.md
landing/: package.json
mobile/: app.json  cd  package.json  serve.js  (+1 more)
programs/daemon-registry/: Cargo.toml  keypair.json
programs/daemon-registry/src/: errors.rs  lib.rs  state.rs
programs/daemon-registry/src/instructions/: approve_work.rs  close_session.rs  create_task.rs  end_session.rs  expire_task.rs  initialize_profile.rs  mod.rs  register_project.rs  reject_work.rs  settle_task.rs  start_session.rs  start_task_session.rs  submit_work_receipt.rs
(+1025 files in other folders)
